debug/SessionRep.txt
./sources/SessionRep.cc: In constructor ‘SessionRepository::SessionRepository(ProblemCollection&)’:
./sources/SessionRep.cc:3:75: error: use of deleted function ‘IReadable::IReadable()’
    3 | SessionRepository::SessionRepository(ProblemCollection & problemCollection) {
      |                                                                           ^
In file included from ./headers/Session.hh:9,
                 from ./headers/SessionRep.hh:9,
                 from ./sources/SessionRep.cc:1:
./headers/Interfaces.hh:44:2: note: declared here
   44 |  IReadable() = delete;
      |  ^~~~~~~~~
./sources/SessionRep.cc:3:75: error: use of deleted function ‘IPrintable::IPrintable()’
    3 | SessionRepository::SessionRepository(ProblemCollection & problemCollection) {
      |                                                                           ^
In file included from ./headers/Session.hh:9,
                 from ./headers/SessionRep.hh:9,
                 from ./sources/SessionRep.cc:1:
./headers/Interfaces.hh:21:2: note: declared here
   21 |  IPrintable() = delete;
      |  ^~~~~~~~~~
./sources/SessionRep.cc:3:75: error: use of deleted function ‘IContainer<ID, T>::IContainer() [with ID = std::__cxx11::basic_string<char>; T = Session]’
    3 | SessionRepository::SessionRepository(ProblemCollection & problemCollection) {
      |                                                                           ^
In file included from ./headers/Session.hh:9,
                 from ./headers/SessionRep.hh:9,
                 from ./sources/SessionRep.cc:1:
./headers/Interfaces.hh:68:2: note: declared here
   68 |  IContainer() = delete;
      |  ^~~~~~~~~~
./sources/SessionRep.cc:4:41: error: passing ‘const ProblemCollection’ as ‘this’ argument discards qualifiers [-fpermissive]
    4 |  SessionRepository::problemCollection = problemCollection;
      |                                         ^~~~~~~~~~~~~~~~~
In file included from ./headers/Session.hh:10,
                 from ./headers/SessionRep.hh:9,
                 from ./sources/SessionRep.cc:1:
./headers/ProblemCol.hh:20:7: note:   in call to ‘ProblemCollection& ProblemCollection::operator=(const ProblemCollection&)’
   20 | class ProblemCollection : public IReadable, public IPrintable, public IContainer<prb::ID, Problem> {
      |       ^~~~~~~~~~~~~~~~~
./sources/SessionRep.cc: At global scope:
./sources/SessionRep.cc:11:6: error: no declaration matches ‘void SessionRepository::print() const’
   11 | void SessionRepository::print() const {
      |      ^~~~~~~~~~~~~~~~~
./sources/SessionRep.cc:11:6: note: no functions named ‘void SessionRepository::print() const’
In file included from ./sources/SessionRep.cc:1:
./headers/SessionRep.hh:21:7: note: ‘class SessionRepository’ defined here
   21 | class SessionRepository : public IReadable, public IPrintable, public IContainer<ses::ID, Session> {
      |       ^~~~~~~~~~~~~~~~~
./sources/SessionRep.cc: In function ‘std::ostream& operator<<(std::ostream&, const SessionRepository&)’:
./sources/SessionRep.cc:17:1: error: no return statement in function returning non-void [-Werror=return-type]
   17 | }
      | ^
./sources/SessionRep.cc:15:43: error: unused parameter ‘out’ [-Werror=unused-parameter]
   15 | std::ostream & operator<< (std::ostream & out, const SessionRepository & printable) {
      |                            ~~~~~~~~~~~~~~~^~~
./sources/SessionRep.cc:15:74: error: unused parameter ‘printable’ [-Werror=unused-parameter]
   15 | std::ostream & operator<< (std::ostream & out, const SessionRepository & printable) {
      |                                                ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~
./sources/SessionRep.cc: At global scope:
./sources/SessionRep.cc:19:6: error: no declaration matches ‘void SessionRepository::read()’
   19 | void SessionRepository::read() {
      |      ^~~~~~~~~~~~~~~~~
./sources/SessionRep.cc:19:6: note: no functions named ‘void SessionRepository::read()’
In file included from ./sources/SessionRep.cc:1:
./headers/SessionRep.hh:21:7: note: ‘class SessionRepository’ defined here
   21 | class SessionRepository : public IReadable, public IPrintable, public IContainer<ses::ID, Session> {
      |       ^~~~~~~~~~~~~~~~~
./sources/SessionRep.cc: In function ‘std::istream& operator>>(std::istream&, SessionRepository&)’:
./sources/SessionRep.cc:25:1: error: no return statement in function returning non-void [-Werror=return-type]
   25 | }
      | ^
./sources/SessionRep.cc:23:43: error: unused parameter ‘in’ [-Werror=unused-parameter]
   23 | std::istream & operator>> (std::istream & in, SessionRepository & readable) {
      |                            ~~~~~~~~~~~~~~~^~
./sources/SessionRep.cc:23:67: error: unused parameter ‘readable’ [-Werror=unused-parameter]
   23 | std::istream & operator>> (std::istream & in, SessionRepository & readable) {
      |                                               ~~~~~~~~~~~~~~~~~~~~^~~~~~~~
./sources/SessionRep.cc: At global scope:
./sources/SessionRep.cc:27:6: error: no declaration matches ‘bool SessionRepository::containsElement(ses::ID) const’
   27 | bool SessionRepository::containsElement(ses::ID id) const {
      |      ^~~~~~~~~~~~~~~~~
./sources/SessionRep.cc:27:6: note: no functions named ‘bool SessionRepository::containsElement(ses::ID) const’
In file included from ./sources/SessionRep.cc:1:
./headers/SessionRep.hh:21:7: note: ‘class SessionRepository’ defined here
   21 | class SessionRepository : public IReadable, public IPrintable, public IContainer<ses::ID, Session> {
      |       ^~~~~~~~~~~~~~~~~
./sources/SessionRep.cc:31:21: error: no declaration matches ‘SessionRepository& SessionRepository::operator[](ses::ID)’
   31 | SessionRepository & SessionRepository::operator[](ses::ID id) {
      |                     ^~~~~~~~~~~~~~~~~
./sources/SessionRep.cc:31:21: note: no functions named ‘SessionRepository& SessionRepository::operator[](ses::ID)’
In file included from ./sources/SessionRep.cc:1:
./headers/SessionRep.hh:21:7: note: ‘class SessionRepository’ defined here
   21 | class SessionRepository : public IReadable, public IPrintable, public IContainer<ses::ID, Session> {
      |       ^~~~~~~~~~~~~~~~~
./sources/SessionRep.cc:35:5: error: no declaration matches ‘int SessionRepository::getCount() const’
   35 | int SessionRepository::getCount() const {
      |     ^~~~~~~~~~~~~~~~~
./sources/SessionRep.cc:35:5: note: no functions named ‘int SessionRepository::getCount() const’
In file included from ./sources/SessionRep.cc:1:
./headers/SessionRep.hh:21:7: note: ‘class SessionRepository’ defined here
   21 | class SessionRepository : public IReadable, public IPrintable, public IContainer<ses::ID, Session> {
      |       ^~~~~~~~~~~~~~~~~
./sources/SessionRep.cc:39:6: error: no declaration matches ‘void SessionRepository::addElement(ses::ID)’
   39 | void SessionRepository::addElement(ses::ID newElementID) {
      |      ^~~~~~~~~~~~~~~~~
./sources/SessionRep.cc:39:6: note: no functions named ‘void SessionRepository::addElement(ses::ID)’
In file included from ./sources/SessionRep.cc:1:
./headers/SessionRep.hh:21:7: note: ‘class SessionRepository’ defined here
   21 | class SessionRepository : public IReadable, public IPrintable, public IContainer<ses::ID, Session> {
      |       ^~~~~~~~~~~~~~~~~
cc1plus: all warnings being treated as errors
